# organvm-scrutator

./: .gitignore  README.md  pyproject.toml
data/: entity-vital-signs.md
data/indices/: visibility-index.json  visibility-index.md
data/inventory/: transfer-plan.md
data/research/: gap-queue.yaml
docs/: SOP-CONSOLIDATE-001-meta-organvm-migration.md  THREE-FILTERS-CONVERSATIONAL-PROMPT-CHAIN.md
scripts/: categorize_repos.sh  execute_transfers.sh  inventory_repos.sh  profile_keep.txt  render_transfer_plan.sh
tests/scripts/: test_pipeline.sh
tests/scripts/fixtures/: repos.jsonl
